<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Global App Variables -->
    <string name="app_name">Proxie</string>
    <string name="title_activity_main">Map</string>
    <string name="hello_world">Hello World</string>
    <string name="action_settings">Settings</string>
    <string name="actionbar_maps_button">Map</string>
    <string name="actionbar_contacts_button">Contacts</string>


    <!-- LoginActivity Strings -->
    <string name="login_activity_header">Login</string>
    <string name="login_activty_button">Login</string>
    <string name="error_incorrect_username_or_password">Incorrect Username or Password!</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="usernameKey">Username</string>
    <string name="usernamehint">Username</string>
    <string name="passwordhint">Password</string>

    <!-- SettingsActivity Strings -->
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference.xml Strings -->
        <!-- Titles -->
    <string name="mapcheckboxdisplayproxie_title">Display Proxie Users</string>
    <string name="mapcheckboxdisplaymessageloc_title">Display Message Locations</string>
    <string name="mapcheckboxincludesender_title">Include Sender</string>
    <string name="mapcheckboxincludelatandlong_title">Include Latitude and Longitude</string>
    <string name="lifeofmessage_title">Life Of Message (Min)</string>
    <string name="proxiestayloggedin_title">Stay Logged In</string>
    <string name="proxierelaymessages_title">Relay Messages</string>
    <string name="mapmaxnumberofhops_title">Max Number of Hops</string>

        <!-- Keys -->
    <string name="mapcheckboxdisplayproxie_key">DisplayProxiePreferenceKey</string>
    <string name="mapcheckboxdisplaymessageloc_key">DisplayMessageLocPreferenceKey</string>
    <string name="mapcheckboxincludesender_key">IncludeSenderPreferenceKey</string>
    <string name="mapcheckboxincludelatandlong_key">IncludeLatandLongPreferenceKey</string>
    <string name="preferencesreen_key">preferenceScreenKey</string>
    <string name="mapmaxnumberofhops_key">MapMaxNumberOfHopsKey</string>
    <string name="lifeofmessage_key">LifeOfMessageKey</string>
    <string name="proxiestayloggedin_key">ProxieStayLoggedInKey</string>
    <string name="proxierelaymessages_key">ProxieRelayMessagesKey</string>

        <!-- Categories -->
    <string name="mappreferencecategory">Map Settings</string>
    <string name="mssgpreferencecategory">Message Settings</string>
    <string name="proxiesettingscategory">Proxie Settings</string>

    <!-- MessageForumActivity -->
    <string name="title_activity_message_forum">MessageForumActivity</string>
    <string name="MessageForumActivityTitle">Message Forum</string>
    <string name="MessageForumFilterButton">Filter</string>
    <string name="MessageForumComposeButton">Compose</string>

    <!-- MessageComposeActivity -->
    <string name="MessageComposeCancelButton">Cancel</string>
    <string name="MessageComposeSendButton">Send</string>
    <string name="title_activity_message_compose">Compose Message</string>

    <!-- ContactsActivity -->
    <string name="title_activity_contacts">Contacts</string>
</resources>
