<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.john.proxie.LoginActivities.LoginActivity">

    <TextView
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/login_activity_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@id/loginactivityheadertitleid" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@id/userNameloginfieldid"
        android:hint="@string/usernamehint"
        android:layout_below="@id/loginactivityheadertitleid"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/passwordhint"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@id/passwordloginfieldid"
        android:layout_below="@id/userNameloginfieldid"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_activty_button"
        android:id="@id/loginactivtybuttonid"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="48dp"
        android:onClick="exitActivity"/>

</RelativeLayout>
